channging to the latest docker image for helm, the one of the book is outdated

--- a/hello-cloudbuild/cloudbuild-deploy.yaml
+++ b/hello-cloudbuild/cloudbuild-deploy.yaml
@@ -23,7 +23,7 @@ steps:
 
   - id: deploy
     dir: hello-cloudbuild
-    name: cloudnatived/helm-cloudbuilder
+    name: alpine/helm:3.2.3
     env:
       - KUBECONFIG=/workspace/.kube/config
     args:
