--- a/hello-cloudbuild/cloudbuild-deploy.yaml
+++ b/hello-cloudbuild/cloudbuild-deploy.yaml
@@ -21,6 +21,20 @@ steps:
       - gcr.io/${PROJECT_ID}/demo:${COMMIT_SHA}
       - gcr.io/${PROJECT_ID}/demo:${TAG_NAME}
 
+
+  - id: create-name-space
+    dir: hello-cloudbuild
+    name: gcr.io/cloud-builders/kubectl
+    env:
+    - CLOUDSDK_CORE_PROJECT=${_CLOUDSDK_CORE_PROJECT}
+    - CLOUDSDK_COMPUTE_ZONE=${_CLOUDSDK_COMPUTE_ZONE}
+    - CLOUDSDK_CONTAINER_CLUSTER=${_CLOUDSDK_CONTAINER_CLUSTER}
+    - KUBECONFIG=/workspace/.kube/config
+    args:
+       - create namespace ${TAG_NAME}-demo
+
+
+
   - id: deploy
     dir: hello-cloudbuild
     name: alpine/helm:3.2.3
