we add a step to create the namespace that we are going to deploy to

--- a/hello-cloudbuild/cloudbuild-deploy.yaml
+++ b/hello-cloudbuild/cloudbuild-deploy.yaml
@@ -31,7 +31,9 @@ steps:
     - CLOUDSDK_CONTAINER_CLUSTER=${_CLOUDSDK_CONTAINER_CLUSTER}
     - KUBECONFIG=/workspace/.kube/config
     args:
-       - create namespace ${TAG_NAME}-demo
+       - create 
+       - namespace 
+       - ${TAG_NAME}-demo
 
 
 
